# dg-commons

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-extra.txt  requirements.txt  setup.py
.circleci/: config.yml
docker/: Dockerfile.base  Makefile  README.md  dependencies-apt.txt  requirements.txt  tmp_req.txt
makefiles/: Makefile.version  Pypi.mk
scenarios/: .gitignore
scenarios/testing/: ESP_Barcelona-20_23_T-1.xml  USA_Lanker-1_1_T-1.xml  USA_Phoenix-51_10_T-1.xml
src/: conf.py  index.rst
src/dg_commons/: __init__.py  game_types.py  geo.py  index.rst  time.py  utils_toolz.py  utils_types.py
src/dg_commons/controllers/: pid.py  pure_pursuit.py  speed.py  steer.py
src/dg_commons/dynamics/: __init__.py  bicycle_dynamic.py
src/dg_commons/eval/: comfort.py  efficiency.py  safety.py
src/dg_commons/evals/: evaluate_efficiency.py  evaluate_safety.py
src/dg_commons/maps/: lanes.py  obstacles_shapes.py  prediction_structures_tmp.py  road_bounds.py  road_networks_tmp.py  shapely_viz.py  shapes_generator.py  utils.py
src/dg_commons/perception/: sensor.py
src/dg_commons/planning/: __init__.py  commands_sampler.py  goals.py  motion_primitives.py  polygon.py  trajectory.py  trajectory_generator_abc.py
src/dg_commons/seq/: __init__.py  seq_op.py  sequence.py
src/dg_commons/sim/: __init__.py  collision.py  collision_structures.py  collision_utils.py  collision_visualisation.py  goals.py  index.rst  lightweight_simulator.py  log_visualisation.py  sim_perception.py  sim_types.py  simulator.py  simulator_animation.py  simulator_structures.py  simulator_visualisation.py  utils.py
src/dg_commons_dev/: curve_approximation_techniques.py  flying_unit.py  noisy_bicycle_model.py  path_approximation_techniques.py  utils.py
src/dg_commons_dev/analysis/: metrics.py  metrics_def.py
src/dg_commons_dev/behavior/: behavior.py  behavior_types.py  cruise.py  emergency.py  replan.py  utils.py  yield_to.py
src/dg_commons_dev/controllers/: controller_types.py  discretization_techniques.py  interface.py  lqr.py  pid.py  pure_pursuit_z.py  situation_controllers.py  speed.py  stanley_controller.py  steering_controllers.py
src/dg_commons_dev/maps/: __init__.py  lanes.py
src/dg_commons_dev/planning/: planner_base.py  rrt.py  rrt_dubin.py  rrt_star.py  rrt_star_dubin.py
src/dg_commons_dev/replanning/: replanner.py
src/dg_commons_dev/state_estimators/: dropping_trechniques.py  estimator_types.py  interpolation_utils.py  (+5 more)
src/dg_commons_tests/: __init__.py  test_seq_op.py  test_sequence.py  tmp.py
src/dg_sim/: collision.py  collision_structures.py  collision_utils.py  collision_visualisation.py  simulator.py  simulator_animation.py  simulator_structures.py  simulator_visualisation.py
src/dg_sim_tests/: test_agent.py  test_logs.py
src/sim/: __init__.py  collision.py  collision_structures.py  collision_utils.py  collision_visualisation.py  sim_types.py  simulator.py  simulator_animation.py  simulator_structures.py  simulator_visualisation.py
src/sim_tests/: test_agent.py  test_logs.py
(+231 files in other folders)
