[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dg-commons"
version = "0.0.45"
description = "Common tools and utilities related to Driving Games"
authors = ["Alessandro Zanardi <azanardi@ethz.ch>"]
readme = "README.md"
license = "LICENSE"
include = ["LICENSE"]
packages = [
    { include = "dg_commons", from = "src" },
]
repository = "https://github.com/idsc-frazzoli/dg-commons"
exclude = ["src/dg_commons_tests/**"]


[tool.poetry.dependencies]
python = "^3.11"
frozendict = "^2.3.4"
cytoolz = "^0.12.0"
cachetools = "^5.0.0"
tqdm = "^4.62.3"
numpy = "^1.21.2"
scipy = "^1.8.0"
matplotlib = "^3.5.0"
shapely = "^2.0.0"
commonroad-io = "2023.3"
dg-commonroad-drivability-checker = "2023.11"
zuper-commons-z7 = "7.2"
PyGeometry-z7 = "7.2"
pycontracts3 = "7.2"
xtermcolor = "*"
pytz = "*"
aiofiles = "*"
webcolors = "*"
future = "*"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
jupyter = "*"
pipdeptree = "^2.2.1"
setuptools = ">=62.1.0"
pytest = "^7"
pytest-cov = "^3"
pytest-xdist = "^2.5.0"
pytest-sugar = "0.9.6"
pytest-mypy = "^0.9.1"
reprep-z7 = "^7"
codecov = "^2.1.9"
coverage = "^6.4"
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "*"
sphinx-autodoc-annotation = "*"
bumpversion = "*"
twine = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --pyargs"
testpaths = [
    "src/dg_commons_tests",
]

[tool.isort]
profile = "black"
